--- a/impact.qmd
+++ b/impact.qmd
@@ -27,7 +27,7 @@ The ETH domain and its staff contributed substantially to the language and its e
 Although there has been a certain sense of urgency for digital transformation in the public sector at least since the pandemic, change management within large institutions does not always align with the timeline of individual academic careers or ongoing daily business. 
 While we greatly appreciate advances in making official statistics available through application programming interfaces (API), as well as investment into community exchange, we provide an immediate solution to data sourcing to those that need to source public data today. 
 In addition, we help identify redundant efforts across institutions and broker the usage of common sources which entails using public money more efficiently. 
-Finally, we help bridge the gap and strengthen the link between public administration and academic research.
+Finally, we help bridge the gap and strengthen the link between public administration and academic research. Our addition of time series to the Swiss data landscape lifts the state-of-the-art by facilitating intertemporal comparison and real-time analysis.
 
 
 
