--- a/ord_plan.qmd
+++ b/ord_plan.qmd
@@ -92,10 +92,10 @@ r <- tbl |>
 
 <!-- communication through the opents project, code as communication channel --> 
 
-*In Work Package 1 (WP1), we lay the technical foundation for turning KOF Swiss Economic Institute's (KOF) existing production process of macroeconomic time series into an open-source framework that creates publicly available, machine-readable, scientific-grade time series in a fully reproducible fashion. 
+*In Work Package 1 (WP1), we lay the technical foundation for turning KOF Swiss Economic Institute's existing production process of macroeconomic time series into an open-source framework that creates publicly available, machine-readable, scientific-grade time series in a fully reproducible fashion. 
 Our approach uses open-source software licenses that are free of license costs and aims to publish not only the resulting time series data but also the technical framework and infrastructure setup. This ensures reproducibility and helps comply with FAIR principles. Thanks to our infrastructure-as-code approach, we can publish information on an ideal runtime environment to help others operate their own instance of the Open Time Series framework.*
 
-Because an active community is crucial to keep the project sustainable, i.e., well maintained, we chose the R Project for Statistical Computing as our main programming language for the implementation of the framework. With its annual user conferences [@inclusivecon] and vibrant local communities^[@rsebook discusses the importance of communities for the learner, including experience from hosting the useR! Conference 2021 which KOF co-chaired.], R is known for its large and inclusive community. Alongside its strong regional and international community, the fact that R is open source and free of license costs lowers the barrier to entrance and contribution considerably. In addition, R offers well-established boiler plating ecosystems like *usethis* [@usethis] and documentation frameworks such as *pkgdown* [@pkgdown] or *Roxygen* [@roxygen2]. 
+Because an active community is crucial to keep the project sustainable, i.e., well maintained, we chose the R Project for Statistical Computing as our main programming language for the implementation of the framework. With its annual user conferences [@inclusivecon] and vibrant local communities^[@rsebook discusses the importance of communities for the learner, including experience from hosting the useR! Conference 2021 which KOF co-chaired.], R is known for its large and inclusive community. Alongside its strong regional and international community, the fact that R is open source and free of license costs lowers the barrier to entrance and contribution considerably. In addition, R offers well-established boilerplating^[In software development, the term *boilerplate* refers a unit of reusable code. Using boilerplate systems helps to homogenize code maintained by a community of maintainers.] ecosystems like *usethis* [@usethis] and documentation frameworks such as *pkgdown* [@pkgdown] or *Roxygen* [@roxygen2]. 
 
 WP1 focuses on the homogenization of the data ingestion process across datasets and data providers. In the first implementation step, we identify common parts of the ingestion process.
 We bundle these common parts in an R package that forms our core library and fosters reuse of source code. We encourage the community to use our core packages and to contribute by adding further dataset-specific packages. To inspire contributions, we supplement the *Open Time Series* framework's core, based on our long-term experience as consumers of public data, with provider-specific ingestion libraries written in R that cover dataset idiosyncrasies.
@@ -212,12 +212,13 @@ r <- tbl |>
 In particular we are looking for community contributions such as maintenance of existing datasets, addition of public datasets that have not been processed yet and community activities. 
 At this stage, we will also intensify activities to explore the expansion of Open Time Series into other academic fields.*
 
-We plan to reach the above goals in three ways: i) integration of *Open Time Series* data and software into academic teaching aimed at scientists from different disciplines. ii) presentation of *Open Time Series* at useR! 2024 in Salzburg, Austria^[useR! is the annual conference of R users. In 2024, it takes place from July 7-11. useR! conferences usually draw more than 1'000 international users from a large variety of fields. See also https://events.linuxfoundation.org/user/ accessed on February 12, 2024.]. iii) participation in local community events iv) hosting of an own event at KOF. 
+We plan to reach the above goals in three ways: i) integration of *Open Time Series* data and software into academic teaching aimed at scientists from different disciplines. ii) presentation of *Open Time Series* at useR! 2024 in Salzburg, Austria^[useR! is the annual conference of R users. In 2024, it takes place from July 7-11 and is ideally suited to kick off our project while allowing us to stay on the ground and reach a highly relevant conference by train. useR! conferences usually draw more than 1'000 international users from a large variety of fields. See also https://events.linuxfoundation.org/user/ accessed on February 12, 2024.]. iii) participation in local community events iv) hosting of an own event at KOF. 
 
 Starting in fall 2024, *Open Time Series* data and software will be integrated into the Hacking for Science course^[See also: the course announcement blog post: https://rseed.ch/posts/h4sci/ and course Kite award nomination: https://ethz.ch/en/the-eth-zurich/education/innovation/kite-award/kite-award-2022/nominierte-projekte-kite-award-2022/hacking-for-social-sciences.html accessed on February 12, 2024.] given at ETH. 
 Originally created for ETHZ D-MTEC PhD students, Hacking for Science is a highly interactive online course whose big picture guidance and hands-on software development approach attracts students from a great variety of fields. 
 The course's last iteration welcomed students from more than 10 different ETH departments as well as guests from outside ETH.
-We aim to communicate the value of open data to this broad audience and learn which challenges ORD faces in different fields. 
+Following up on previous findings about a desirable degree of technical expertise in modern empirical economics [@wizcarpenter], we are eager to learn about the challenges ORD faces in different fields and discuss the value of open data with a broad audience of young researchers.
+
 Currently, we also explore the possibility of running Hacking for Research Assistants – a satellite event for research assistants.
 In addition our teaching is complemented by the Research Software Engineering and Economic Data (RSEED) workshop series started in early 2024 which gives us an additional channel to promote an ORD mindset.
 
