--- a/references.bib
+++ b/references.bib
@@ -163,3 +163,12 @@ url={https://doi.org/10.1038/sdata.2016.18}
 	title = {Zauberer oder Zimmermann – Welche technischen Fähigkeiten braucht eine moderne Ökonom:in?},
 	PAGES = {90 - 95}
 }
+
+
+@online{openwashdata,
+  author = {Schöbitz, Lars and Dr. Elizabeth Tilley, Prof. and Matthias
+    Bannert, Dr.},
+  title = {ETH {ORD} {Program}},
+  url = {https://openwashdata.org//pages/gallery/proposal},
+  langid = {en}
+}
